# youvegotdata

./: .gitignore  README.md  environ-3.8.yml  pyproject.toml  template-config.ini
.github/workflows/: package-and-publish.yaml
tests/: test_youvegotdata.py
youvegotdata/: youvegotdata.py
