# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# Choosing a build backend for your Python package
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta" 

[project]
name = "youvegotdata" # REQUIRED
version = "1.0.0"
description = "Send new file notifications"
readme = "README.md"

requires-python = ">=3.8"

dependencies = ["pika"]

authors = [
  {name = "Jim Fluke", email = "james.fluke@colostate.edu" }
]

[project.optional-dependencies]
test = ["pytest"]
